# src/main/java/br/com/petros/avaluator/domain/model/GameResult.java
@@ -1,0 +1,6 @@
+package br.com.petros.avaluator.domain.model;
+
+import java.util.Optional;
+
+public record GameResult(GameStatus status, Optional<CellMark> winner) {
+}
